@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.11 2004/10/11 21:15:49 abs Exp $
+$NetBSD: distinfo,v 1.12 2005/01/21 12:24:39 abs Exp $
 
-SHA1 (jakarta-tomcat-5.0.28.tar.gz) = 00dc6526db0a8a75c2f4944b7253ea230b31ab70
-Size (jakarta-tomcat-5.0.28.tar.gz) = 10718313 bytes
+SHA1 (jakarta-tomcat-5.0.30.tar.gz) = 7d01bd45991deada475490521985e085310bb916
+Size (jakarta-tomcat-5.0.30.tar.gz) = 10842790 bytes
